rename pubkey file.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ sburg &#64; eperm.net
 </p>
 
 <p>
-My current <b>PGP key</b> is <a href="sburg_pubkey.asc">here</a>
+My current <b>PGP key</b> is <a href="pubkey.asc">here</a>
 <p>
 <p>
 The fingerprint is: 8390 91D8 7025 E7F5 64E4  5C34 7799 7C2B 00E5 8092
